--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,8 +4,7 @@ html, body{
 }
 
 
-.header{
-    
+.header{  
     height: 8vh;
     display: flex;
     align-items: center;
@@ -16,8 +15,6 @@ html, body{
 
     padding-left: 20px;
     font-size: 20px;
-
-    box-shadow:100px 100px white;
     z-index: 2;
 }
 .content{
@@ -27,9 +24,30 @@ html, body{
     display: grid;
     grid-template-columns: 1fr 10fr;
 }
+#current-content{
+    height:100%;
+}
 .footer{
-    background:blue;
     height: 3vh;
+    display: flex;
+    align-items: center;
+
+    font-family: 'Fredoka One', cursive;
+    background:black;
+    color:white;
+
+    padding-left: 20px;
+    font-size: 10px;
+    
+}
+#wrapper{
+    background-color: rgb(0, 0, 0, 0.5);
+    position: absolute;
+    height: 92vh;
+    width: 100%;
+    transition: all 0.3;
+
+    z-index: -1;
 }
 
 @media only screen and (max-width: 700px) {
