--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto+Condensed:wght@700&display=swap');
 html, body{
     margin: 0;
 }
@@ -11,7 +11,7 @@ html, body{
 
     font-family: 'Fredoka One', cursive;
     background:black;
-    color: white;
+    color: lightgray;
 
     padding-left: 20px;
     font-size: 20px;
@@ -34,7 +34,7 @@ html, body{
 
     font-family: 'Fredoka One', cursive;
     background:black;
-    color:white;
+    color:lightgrey;
 
     padding-left: 20px;
     font-size: 10px;
@@ -47,7 +47,12 @@ html, body{
     width: 100%;
     transition: all 0.3;
 
+    display:flex;
+    justify-content: center;
+    align-items: center;
     z-index: -1;
+
+    transition: all 0.3s;
 }
 
 @media only screen and (max-width: 700px) {
