--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -1,7 +1,8 @@
 
+
 .projects-div{
     margin: 1.5rem;
-    height: 90%;
+    height: 80vh;
     display: grid;
     grid-template-columns: 1fr 16fr;;
 }
@@ -151,17 +152,24 @@
     background-color: lightgray;
     color: black;
 }
+*{
+    border:solid;
+}
 
-
-.added-projects{
+.projects-list{
+    border: solid blue;
+    padding: 1em;
     height: 100%;
     overflow: auto;
-    gap: 2px;
-
 }
+
 .project-tab{
-    width: 90%;
-    height: 8%;
+    width: 100%;
+    height: 4em;
+
+    display: grid;
+    grid-template-columns: 8fr 0.5fr 0.5fr;
+    margin-bottom: 10px;
 }
 .pinned{
     position: sticky;
@@ -169,14 +177,25 @@
     background-color: blue;
 }
 
+.project-tab-title{
+    display:flex;
+    align-items: center;
+    padding-left: 1em;
+    font-size: 0.8rem;
+    font-family: 'Fredoka One', cursive;
+    color: black;
+}
+.project-tab-delete, .project-tab-pin{
+    width: 3em;
+    height: 3em;
+    border-radius: 50%;
+}
 .project-tab-delete{
     color:blue;
-    z-index: 1;
 }
 
 .project-tab-pin{
     color:red;
-    z-index: 1;
 }
 
 
