--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -1,20 +1,20 @@
 
-
 .projects-div{
-    margin: 1.5rem;
+    margin: 1rem;
     height: 80vh;
     display: grid;
     grid-template-columns: 1fr 16fr;;
 }
 .add-project-btn{
-    height: 4rem;
-    width: 4rem;
+    height: 3rem;
+    width: 3rem;
+    justify-self: center;
     
     border-radius: 50%;
     border:none;
     background-color: lightgray;
     color:black;
-    font-size: 1.6rem;
+    font-size: 0.8rem;
     font-family: 'Fredoka One', cursive;
     transition: all 0.3s;
 
@@ -31,8 +31,8 @@
     height: 80vmin;
     background-image: linear-gradient(orange, purple);
     display: grid;
-    grid-template-columns: 10fr 1fr;
-    grid-template-rows: 1fr 10fr 1fr;
+    grid-template-columns: 10fr 0.5fr;
+    grid-template-rows: 0.5fr 16fr 2fr;
 
     padding: 1.6em;
     padding-right: 0;
@@ -67,7 +67,7 @@
     background: transparent;
 
     font-family: 'Fredoka One', cursive;
-    font-size: 1rem;
+    font-size: 0.8rem;
     color:black;
 
     
@@ -83,7 +83,7 @@
     background: transparent;
 
     font-family: 'Fredoka One', cursive;
-    font-size: 1.6rem;
+    font-size: 0.8rem;
     color:lightgray;
 
 
@@ -120,7 +120,7 @@
     background: transparent;
 
     font-family: 'Fredoka One', cursive;
-    font-size: 1rem;
+    font-size: 0.8rem;
     color:black;
 
     border:none;
@@ -142,7 +142,7 @@
     background: orange;
     color:lightgray;
 
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-align: center;
 
     transition: all 0.3s;
@@ -152,29 +152,53 @@
     background-color: lightgray;
     color: black;
 }
-*{
-    border:solid;
-}
 
 .projects-list{
-    border: solid blue;
     padding: 1em;
     height: 100%;
     overflow: auto;
 }
 
 .project-tab{
-    width: 100%;
+    width: 90%;
     height: 4em;
+    border-radius: 9999px;
+    border: solid;
 
     display: grid;
     grid-template-columns: 8fr 0.5fr 0.5fr;
     margin-bottom: 10px;
+    transition: all 0.3s;
+
+    align-self: center;
+    justify-self: center;
+}
+.project-tab:hover{
+    background-color: rgb(0, 0, 0, 0.2);
 }
 .pinned{
-    position: sticky;
-    width: 50%;
-    background-color: blue;
+    position:sticky;
+    bottom: 0;
+    width: 80%;
+    transition: all 0.3s;
+    background-image: linear-gradient(to right, orange, purple);
+}
+
+.pinned> .project-tab-title{
+    color:white;
+}
+.pinned> .project-tab-delete{
+    background-image: url(../../icons/delete/delete-white-16.svg);
+}
+.pinned> .project-tab-delete:hover{
+    transform: scale(1.1);
+}
+
+.pinned> .project-tab-pin{
+    background-image: url(../../icons/pin/pin-white-16.svg);
+}
+.pinned> .project-tab-pin:hover{
+    transform: scale(1.1);
 }
 
 .project-tab-title{
@@ -184,20 +208,33 @@
     font-size: 0.8rem;
     font-family: 'Fredoka One', cursive;
     color: black;
+
+    transition: all 0.3s;
 }
 .project-tab-delete, .project-tab-pin{
     width: 3em;
     height: 3em;
     border-radius: 50%;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    border:none;
+    transition: all 0.3s;
 }
 .project-tab-delete{
-    color:blue;
+    background-image: url(../../icons/delete/delete-black-16.svg);  
 }
-
+.project-tab-delete:hover{
+    transform: scale(1.1);  
+}
 .project-tab-pin{
-    color:red;
-}
+    background-image: url(../../icons/pin/pin-black-16.svg);
 
+}
+.project-tab-pin:hover{
+    transform: scale(1.1);
+
+}
 
 @media only screen and (max-width: 600px) {
     .add-project-btn{
@@ -237,5 +274,31 @@
         height: 90%;
         width: 36%;
         font-size: 0.4rem;
+    }
+    
+    .projects-list{
+        height: 100%;
+        overflow: auto;
+    }
+    .project-tab{
+        height: 3em;
+    }
+    .project-tab-title{
+        display:flex;
+        height: 3em;
+        text-overflow: ellipsis;
+        align-items: center;
+        padding-left: 1em;
+        font-size: 0.6rem;
+        font-family: 'Fredoka One', cursive;
+        color: black;
+    
+        transition: all 0.3s;
+    }
+
+    .project-tab-delete, .project-tab-pin{
+        width: 2em;
+        height: 2em;
+        background-size: 40%;
     }
   }
