--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -32,13 +32,15 @@
     background-image: linear-gradient(orange, purple);
     display: grid;
     grid-template-columns: 10fr 0.5fr;
-    grid-template-rows: 0.5fr 16fr 2fr;
+    grid-template-rows: 1fr 10fr 1.5fr;
 
     padding: 1.6em;
-    padding-right: 0;
 
     row-gap: 1.6em;
     border-radius: 2.5em;
+
+    align-items: center;
+    justify-self: center;
 }
 
 .project-entry-title-span{
@@ -48,7 +50,7 @@
 
     padding-left: 1.6em;
     
-    height: 100%;
+    height: 80%;
 
     border-radius: 9999px;
 
@@ -77,8 +79,8 @@
 }
 .project-entry-close-btn{
     border-radius: 50%;
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
 
     background: transparent;
 
@@ -129,7 +131,7 @@
 
 .project-entry-add-btn{
     width: 36%;
-    height: 90%;
+    height: 80%;
 
 
     align-self: center;
@@ -154,16 +156,16 @@
 }
 
 .projects-list{
-    padding: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
     height: 100%;
     overflow: auto;
 }
 
 .project-tab{
     width: 90%;
-    height: 4em;
+    height: 3rem;
     border-radius: 9999px;
-    border: solid;
 
     display: grid;
     grid-template-columns: 8fr 0.5fr 0.5fr;
@@ -201,7 +203,7 @@
     transform: scale(1.1);
 }
 
-.project-tab-title{
+.project-tab-title, .view-project-title, .view-project-desc{
     display:flex;
     align-items: center;
     padding-left: 1em;
@@ -235,7 +237,67 @@
     transform: scale(1.1);
 
 }
+.view-project-div{
+    width: 80vmin;
+    height: 80vmin;
+    background-image: linear-gradient(orange, purple);
+    display: grid;
+    grid-template-columns: 10fr 0.5fr;
+    grid-template-rows: 1fr 10fr 1.5fr;
 
+    padding: 1.6em;
+
+    row-gap: 1.6em;
+    border-radius: 2.5em;
+
+    justify-self: center;
+}
+.view-project-title{
+    color: white;
+    font-size: 1.6rem;
+}
+.view-project-desc{
+    color:white;
+    align-items:unset;
+    overflow: auto;
+    padding-left: 2em;
+}
+.view-project-button-holder{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+
+    gap: 1em;
+}
+.view-project-btn{
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+
+    background: transparent;
+
+    font-family: 'Fredoka One', cursive;
+    color:lightgray;
+    transition: all 0.3s;
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 30%;
+
+    border:none;
+}
+.view-project-btn:hover{
+    transform: scale(1.1);
+}
+.delete-project-button{
+    background-image: url('../../icons/delete/delete-white-32.svg');
+}
+.edit-project-project{
+    background-image: url('../../icons/edit/edit-white-32.svg');
+}
+.pin-project-button{
+    background-image: url('../../icons/pin/pin-white-32.svg');
+}
 @media only screen and (max-width: 600px) {
     .add-project-btn{
         height: 2rem;
@@ -281,24 +343,41 @@
         overflow: auto;
     }
     .project-tab{
-        height: 3em;
+        height: 2rem;
     }
-    .project-tab-title{
+    .project-tab-title, .view-project-title, .view-project-desc{
         display:flex;
-        height: 3em;
+        height: 1.5rem;
         text-overflow: ellipsis;
         align-items: center;
         padding-left: 1em;
         font-size: 0.6rem;
         font-family: 'Fredoka One', cursive;
         color: black;
-    
         transition: all 0.3s;
     }
 
     .project-tab-delete, .project-tab-pin{
-        width: 2em;
-        height: 2em;
-        background-size: 40%;
+        width: 2rem;
+        height: 2rem;
+        background-size: 50%;
+    }
+
+    .view-project-title{
+        color: white;
+        font-size: 0.8rem;
+    }
+    .view-project-desc{
+        color:white;
+        align-items:unset;
+        overflow: auto;
+        padding-left: 1em;
+    }
+    .view-project-button-holder{
+        display: flex;
+        align-items: center;
+        justify-content: end;
+    
+        gap: 0.5em;
     }
   }
