--- a/src/styles/pages/notes.css
+++ b/src/styles/pages/notes.css
@@ -251,6 +251,15 @@
 
     border:none;
 }
+.delete-button{
+    background-image: url(../../icons/delete/delete-white-32.svg);
+}
+.edit-button{
+    background-image: url(../../icons/edit/edit-white-32.svg);
+}
+.pin-button{
+    background-image: url(../../icons/pin/pin-white-32.svg);
+}
 .view-note-btn:hover{
     transform: scale(1.2);
 }
